2015-06-04  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  operation/inventories/manage_objects_type_fields.php
	  operation/inventories/manage_objects_type_list.php: Not allow 
	fields update when flag 'not_allow_updates' is checked.
	Ticket #2298.

2015-06-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/inventories/inventory_detail.php: Fixed
	bug updating inventory. Ticket #2297.

2015-06-01  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_incidents.php: Added fields
	for export to csv.
	  
	* operation/companies/company_detail.php: Changed
	invoice acls.

2015-05-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_incidents.php
	  include/functions_inventories.php: Fixed bug
	importing objects from csv.

2015-05-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  extras/import_users_from_csv.php
	  extras/migrate.sql
	  general/home.php
	  godmode/usuarios/configurar_usuarios.php
	  godmode/grupos/configurar_grupos.php
	  godmode/grupos/lista_grupos.php
	  include/functions_api.php
	  include/functions_user.php
	  include/help/en/help_import_from_csv.php
	  include/help/es/help_import_from_csv.php
	  operation/main_menu.php
	  operation/side_menu.php: Removed simple mode.

	* extras/mr/22.sql: Added file.

	* operation/incidents_simple: Deleted dir.

	* include/export_csv.php
	  include/functions_incidents.php: Changed ids for
	text in export to csv. Ticket 2274.

	* operation/incidents/type_detail.php: Changed
	management of ticket types.

	* operation/inventories/inventory_reports_detail.php:
	Fixed import to csv. Ticket 2188.

	* operation/kb/browse.php
	  operation/kb/browse_data.php: Fixed KB edition. 
	Ticket 2273.  

2015-05-25  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_dbdata.sql: Update token.

2015-05-25  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  include/functions_form.php