@@ -106,7 +106,7 @@ $table->data[9][0] = '<label>' . __('Inherit') . print_help_tip(__('With this va
 $table->data[10][0] = print_checkbox ('inherit', 1, $inherit, __('Inherit'));
 $table->data[11][0] = '<label>' . __('Show in list') . print_help_tip(__('With this value checked this field will be displayed in search list.'), true) . '</label>';
 $table->data[12][0] = print_checkbox ('show_list', 1, $show_list, __('Show in list'));
-$table->data[13][0] = '<label>' . __('Not allow updates') . print_help_tip(__(''), true) . '</label>';
+$table->data[13][0] = '<label>' . __('Not allow updates') . print_help_tip(__('With this value checked this field will not be update when we receive remote inventory data'), true) . '</label>';
 $table->data[14][0] = print_checkbox ('not_allow_updates', 1, $not_allow_updates, __('Not allow updates'));
 
 if (empty($id_object_type_field)) {
